--- a/miniprogram/pages/home/examWritten/examWritten.wxml
+++ b/miniprogram/pages/home/examWritten/examWritten.wxml
@@ -1,5 +1,5 @@
 <cu-custom bgColor="bg-yellow" isBack="{{!ifSubmit?true:false}}" >
-	<view slot="content"></view>
+	<view slot="content">{{bank.title}}</view>
 	<view wx:if="{{!ifSubmit}}" slot="backText">模拟笔试</view>
 </cu-custom>
 
@@ -17,7 +17,8 @@
 <block wx:if="{{item.type === '单选'}}">
   <view class="radio-question" >
     <view class="quetion-title">
-      <text>{{item.id}}. {{item.title}}【单选】</text>
+      <text>{{item.id}}. {{item.title}}【单选】
+      </text>
     </view>
     <radio-group data-type="{{item.type}}" id="{{item.id}}" bindchange="radioChange" class="radio-group" >
      <label wx:for="{{item.options}}" wx:key="key" wx:for-index="key"  wx:for-item="value"  class="my-choosebox">
