--- a/miniprogram/pages/home/wrongAll/wrongAll.wxss
+++ b/miniprogram/pages/home/wrongAll/wrongAll.wxss
@@ -8,7 +8,7 @@ scroll-view{
 .menu {
   position: absolute;
   left: 668rpx;
-  top: 329rpx;
+  top: 18vh;
   width: 64rpx;
   height: 64rpx;
   font-size: 62rpx;
@@ -20,16 +20,14 @@ scroll-view{
 .bank-title {
   margin-left: 34rpx;
   padding-top: 42rpx;
-  width: 676rpx;
-  height: 160rpx;
   color: rgba(16, 16, 16, 1);
-  font-size: 56rpx;
+  font-size: 50rpx;
   text-align: left;
   font-family: PingFangSC-regular;
 }
 .score-time {
   margin-left: 34rpx;
-  margin-top: 65rpx;
+  margin-top: 27rpx;
   margin-bottom: 30rpx;
   height: 40rpx;
   color: rgba(16, 16, 16, 1);
@@ -38,14 +36,12 @@ scroll-view{
   font-family: PingFangSC-regular;
 }
 .line {
-  /* position: absolute; */
   width: 750rpx;
   border: 1rpx solid rgba(187, 187, 187, 1);
 }
 .bank {
   margin-left: 34rpx;
   padding-top: 45rpx;
-  /* height: 520rpx; */
   height: 50vh;
   overflow: auto;
   
@@ -80,11 +76,18 @@ scroll-view{
 }
  .my-choosebox checkbox {
   transform: scale(0.6);
-  border: 4rpx solid transparent;
+  /* border: 4rpx solid transparent; */
+  border: 4rpx solid rgba(250, 191, 1, 1);
   background: transparent;
 }
 .my-choosebox .no-checkbox {
   border: 4rpx solid rgba(250, 191, 1, 1);
+}
+radio.red {
+  border: 4rpx solid red !important;
+}
+checkbox.red {
+  border: 4rpx solid red !important;
 }
 .yourblank {
   font-size: 36rpx;
