--- a/miniprogram/pages/center/InterviewScenes/InterviewScenes.wxml
+++ b/miniprogram/pages/center/InterviewScenes/InterviewScenes.wxml
@@ -1,16 +1,30 @@
 <!--miniprogram/pages/center/InterviewScenes/InterviewScenes.wxml-->
-<cu-custom bgColor="bg-yellow" isBack="{{true}}" >
+<cu-custom bgColor="bg-yellow" isBack="{{true}}">
 	<view slot="content"></view>
 	<view slot="backText">面试现场</view>
 </cu-custom>
 <view class="wrap">
-	<view class="item" bindtap="toView">
-		<text class="title">2019年百度校招面试</text>
-		<text class="cuIcon-playfill text-yellow"></text>
-	</view>
-	<!-- <view class="item">
-		<text class="title">2019年百度校招面试</text>
-		<text class="cuIcon-playfill text-yellow"></text>
-	</view> -->
-</view>
+	<block wx:if="{{banksList.length > 0}}">
+		<block wx:for="{{banksList}}" wx:key="parentId">
+			<navigator url="../viewVideo/viewVideo?id={{item.parentId}}">
+				<view class="item">
+					<text class="title">{{item.title}}</text>
+					<text class="cuIcon-playfill text-yellow"></text>
+				</view>
+			</navigator>
+		</block>
+	</block>
+	<block wx:else>
+		<view class="bank-wrap">
+			<view class="bank" style="padding: 40rpx;">
+				<view>
+					<text class="text-yellow">暂无面试现场</text>
+				</view>
+				<view>
+					<text class="text-yellow">（tips：只有在首页进行模拟面试的面试现场才会显示哦）</text>
+				</view>
+			</view>
+		</view>
+	</block>
 
+</view>
