--- a/miniprogram/pages/center/InterviewScenes/InterviewScenes.wxss
+++ b/miniprogram/pages/center/InterviewScenes/InterviewScenes.wxss
@@ -13,11 +13,16 @@ page {
   margin: 50rpx auto;
 }
 .item .title {
+  display: inline-block;
   color: rgba(16, 16, 16, 1);
   font-size: 36rpx;
   text-align: left;
   font-family: PingFangSC-regular;
   line-height: 114rpx;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  width: 500rpx;
 }
 .item .cuIcon-playfill {
   float: right;
@@ -28,4 +33,24 @@ page {
   height: 56rpx;
   line-height: 56rpx;
   padding: 0 0 0 20rpx;
+}
+
+.bank-wrap {
+  width: 100%;
+  line-height: 40rpx;
+  border-radius: 0rpx;
+  text-align: center;
+  background-color: white;
+}
+.bank {
+  position: relative;
+  left: 36rpx;
+  margin: 30rpx 0;
+  z-index: 2;
+  width: 680rpx;
+  height: 200rpx;
+  line-height: 40rpx;
+  border-radius: 20rpx;
+  text-align: center;
+  border: 1rpx solid rgba(187, 187, 187, 1);
 }
