--- a/miniprogram/pages/center/viewVideo/viewVideo.wxml
+++ b/miniprogram/pages/center/viewVideo/viewVideo.wxml
@@ -3,12 +3,12 @@
 	<view slot="backText">面试现场</view>
 </cu-custom>
 <view class="wrap">
+<block wx:for="{{questions.questionsFileArry}}" wx:key="index">
   <view class="item">
-    <text class="title">1.请介绍一下你自己。</text>
-    <view class="video-wrap"></view>
+      <text class="title">{{index + 1}}.{{item.title}}</text>
+      <view class="video-wrap"></view>
   </view>
-  <view class="item">
-    <text class="title">2.如果你的同事让你帮他完成工作，可是你……，但他……，你会怎么做？</text>
-    <view class="video-wrap"></view>
-  </view>
+</block>
+  
+ 
 </view>
