--- a/miniprogram/pages/home/score/score.wxml
+++ b/miniprogram/pages/home/score/score.wxml
@@ -7,19 +7,19 @@
 <view class="score1">{{finalCorrectRate}}</view>
 <view class="blank"></view>
 <view class="qusetionType">题型</view>
-<view class="singleChoice">单选题({{allTypeNum.allDanxuan}}道)</view>
-<view class="multipleChoice">多项选择题({{allTypeNum.allDuoxuan}}道)</view>
-<view class="budingxiang">不定项选题({{allTypeNum.allBudingxiang}}道)</view>
-<view class="panduan">判断题({{allTypeNum.allPanduan}}道)</view>
-<view class="tiankong">填空题({{allTypeNum.allTiankong}}道)</view>
-<view class="paixu">排序题({{allTypeNum.allPaixu}}道)</view>
+<view class="singleChoice">单选题({{questionTypeNum.radio}}道)</view>
+<view class="multipleChoice">多项选择题({{questionTypeNum.checkbox}}道)</view>
+<view class="budingxiang">不定项选题({{questionTypeNum.unsteady}}道)</view>
+<view class="panduan">判断题({{questionTypeNum.judge}}道)</view>
+<view class="tiankong">填空题({{questionTypeNum.blank}}道)</view>
+<view class="paixu">排序题({{questionTypeNum.sort}}道)</view>
 <view class="accuracy">正确率/%</view>
-<view class="score2">{{questionTypesRate.danxuan}}</view>
-<view class="score3">{{questionTypesRate.duoxuan}}</view>
-<view class="score4">{{questionTypesRate.budingxiang}}</view>
-<view class="score5">{{questionTypesRate.panduan}}</view>
-<view class="score6">{{questionTypesRate.tiankong}}</view>
-<view class="score7">{{questionTypesRate.paixu}}</view>
+<view class="score2">{{questionTypesRate.radio}}</view>
+<view class="score3">{{questionTypesRate.checkbox}}</view>
+<view class="score4">{{questionTypesRate.unsteady}}</view>
+<view class="score5">{{questionTypesRate.judge}}</view>
+<view class="score6">{{questionTypesRate.blank}}</view>
+<view class="score7">{{questionTypesRate.sort}}</view>
 <navigator url="../index/index" open-type="switchTab"><button  class="button1">返回首页</button></navigator>
 <navigator url="../wrongAll/wrongAll?class=笔试"><button class="button2">查看试卷</button></navigator>
 <!-- <van-row>
